# pulseaudio-state-writer

./: .clang-format  README.md  meson.build
src/: alabel.cpp  alabel.hpp  emit.cpp  emit.hpp  main.cpp  pulseaudio.cpp  pulseaudio.hpp
subprojects/: jsoncpp.wrap
